# cbd-stone-llm

./: .gitignore  CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: dependencies.py
backend/app/core/: openai_client.py  prompt_builder.py  reply_builder.py  schema_loader.py  session_store.py
backend/app/routers/: chat.py  extract.py  health.py  predict.py
backend/app/schemas/: chat.py  extraction.py  prediction.py
backend/app/services/: conversation.py  extraction.py  inference.py  safeguard.py  validation.py
backend/config/: features.yaml
backend/models/: initial.pkl  model_predict_if_ercp.pkl
backend/tests/: test_api.py  test_architectural.py  test_chat_api.py  test_conversation.py  test_extract_api.py  test_extraction.py  test_inference.py  test_prompt_builder.py  test_reply_builder.py  test_safeguard.py  test_schema_loader.py  test_session_store.py
docs/: email_spec_of_project.txt
docs/Batch_pred/: check.xlsx  predictions.csv
docs/cbd app/: app.py  environment.yml  test_load.py
docs/scripts/: start-cbd-backend.bat  start-cbd-frontend.bat
frontend/: vite.config.ts
frontend/src/: App.tsx
(+66 files in other folders)
