[project]
name = "cbd-stone-llm-backend"
version = "0.1.0"
description = "FastAPI backend for CBD Stone LLM clinical decision support"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi[standard]==0.135.3",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "openai>=1.50,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
